--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -209,4 +209,4 @@ bind = $mainMod, F1, exec, brightnessctl -c backlight set 5%-
 bind = $mainMod, L, exec, swaylock
 
 # Temp, screenshot
-bind = $mainMod SHIFT, P, exec, /usr/share/sway/scripts/grimshot --notify save output
+bind = $mainMod SHIFT, P, exec, hyprshotmenu
