--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,7 +28,7 @@ source = ~/.config/hypr/mocha.conf
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
+$fileManager = nemo
 $menu = rofi -show drun
 
 # Some default env vars.
@@ -36,10 +36,10 @@ env = XCURSOR_SIZE,20
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = us, fr
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
